--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  }
+}
 
 .header-menu {
   display: flex;
@@ -21,6 +21,21 @@
   text-decoration: none;
   color: #141414;
   display: block;
+  position: relative;
+}
+.header-menu a::after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 0%;
+  background-color: #000000;
+  margin-top: 4px;
+  transition: 0.3s;
+  position: absolute;
+}
+
+.header-menu a:hover:after {
+  width: 70%;
 }
 
 @media (max-width: 800px) {
