--- a/css/formacao.css
+++ b/css/formacao.css
@@ -13,15 +13,15 @@
   position: relative;
 }
 
-.formacao-container::after{
-   content: "";
-   display: block;
-   width: 130px;
-   height: 100px;
-   background: url(../images/detalhe.svg) no-repeat center;
-   position: absolute;
-   bottom: -50px;
-   left: 20px;
+.formacao-container::after {
+  content: "";
+  display: block;
+  width: 130px;
+  height: 100px;
+  background: url(../images/detalhe.svg) no-repeat center;
+  position: absolute;
+  bottom: -50px;
+  left: 20px;
 }
 
 .formacao .subtitulo {
@@ -65,7 +65,7 @@
 }
 
 .faculdade-curso {
-   flex: 1;
+  flex: 1;
   font-size: 1.125rem;
   line-height: 1.4;
   margin-bottom: 40px;
@@ -83,80 +83,79 @@
 }
 
 .faculdade-instituicao {
-   font-size: 1.125rem;
-   color: #a3a3a3;
+  font-size: 1.125rem;
+  color: #a3a3a3;
 }
 
 .cursos {
-   margin-bottom: 60px;
+  margin-bottom: 60px;
 }
 
 .formacao-extra h3 {
-   font-size: 0.875rem;
-   line-height: 1.4;
-   color: #8f8f8f;
-   text-transform: uppercase;
-   margin-bottom: 30px;
-   position: relative;
+  font-size: 0.875rem;
+  line-height: 1.4;
+  color: #8f8f8f;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  position: relative;
 }
 
-.formacao-extra h3::before{
-   display: block;
-   content:"";
-   width: 48px;
-   height: 48px;
-   
-   position: absolute;
-   left: -56px;
-   top: -16px;
+.formacao-extra h3::before {
+  display: block;
+  content: "";
+  width: 48px;
+  height: 48px;
+
+  position: absolute;
+  left: -56px;
+  top: -16px;
 }
 
 .cursos h3::before {
-   background: url("../images/cursos.svg") no-repeat center center ;
+  background: url("../img/cursos.svg") no-repeat center center;
 }
 
 .idiomas h3::before {
-   background: url("../images/idiomas.svg") no-repeat center center ;
+  background: url("../img/idiomas.svg") no-repeat center center;
 }
 
 .formacao-extra li {
-   font-size: 1.125rem;
-   line-height: 1.1;
-   margin-bottom: 20px;
+  font-size: 1.125rem;
+  line-height: 1.1;
+  margin-bottom: 20px;
 }
 
 .formacao-extra span {
-   color: #8f8f8f;
+  color: #8f8f8f;
 }
 .cursos li a {
-   text-decoration: none;
-   color: #a3a3a3;
-   display: flex;
-   justify-content: space-between;
+  text-decoration: none;
+  color: #a3a3a3;
+  display: flex;
+  justify-content: space-between;
 }
 
-@media (max-width: 800px){
-.formacao-container {
-   grid-template-columns: 1fr;
-   padding: 60px 20px;
-   gap: 40px;
-}
-.formacao .subtitulo{
-   color: #ffffff;
-}
-.formacao-texto {
-   font-size: 1.25rem;
-}
-.formacao-extra h3::before{
-   position: initial;
-   margin-bottom: 10px;
-}
-.cursos li a {
-   text-decoration: none;
-   font-size: .8rem;
-   color: #a3a3a3;
-   display: flex;
-   justify-content: space-between;
-}
-
+@media (max-width: 800px) {
+  .formacao-container {
+    grid-template-columns: 1fr;
+    padding: 60px 20px;
+    gap: 40px;
+  }
+  .formacao .subtitulo {
+    color: #ffffff;
+  }
+  .formacao-texto {
+    font-size: 1.25rem;
+  }
+  .formacao-extra h3::before {
+    position: initial;
+    margin-bottom: 10px;
+  }
+  .cursos li a {
+    text-decoration: none;
+    font-size: 0.8rem;
+    color: #a3a3a3;
+    display: flex;
+    justify-content: space-between;
+  }
 }
