--- a/css/footer.css
+++ b/css/footer.css
@@ -13,7 +13,7 @@
 }
 
 .footer-texto {
-  font-size: 1.5rem;
+  font-size: 2rem;
   line-height: 1.33;
   color: #cccccc;
 }
@@ -23,7 +23,7 @@
   font-size: 2.25rem;
   line-height: 1.1;
   color: #ffffff;
-  margin-bottom: 30px;
+  margin-bottom: 5px;
 }
 
 .footer-contato li a {
@@ -35,9 +35,33 @@
   font-size: 1.125rem;
   color: #8f8f8f;
 }
+.footer img {
+  background-color: #1f1f1fc9;
+  border-radius: 5px;
+  width: 60px;
+}
+.redes-sociais {
+  display: grid;
 
+  margin-left: 0;
+  margin-right: 0;
+}
 
-@media (max-width:800px) {
+.redes {
+  display: flex;
+}
+.redes img {
+  margin: 10px;
+  padding: 10px;
+  border: 3px solid #8f8f8f;
+}
+
+.redes img a {
+  padding: 50px;
+  color: #8f8f8f;
+}
+
+@media (max-width: 800px) {
   .footer-container {
     grid-template-columns: 1fr;
     gap: 40px;
@@ -47,18 +71,34 @@
   }
 }
 
-@media (max-width: 430px) {
+@media (max-width: 400px) {
   .footer-container {
     grid-template-columns: 1fr;
     gap: 40px;
   }
   .footer-contato li {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
+  }
+  .footer-contato a {
+    font-size: 1.1rem;
+  }
+
+  .redes img {
+    box-sizing: border-box;
+    height: 45px;
+    margin: 5px;
+    padding: 0 5px;
   }
   .footer-texto {
     max-width: 300px;
     font-size: 1.3rem;
     line-height: 1.33;
     color: #cccccc;
+  }
+  .footer img {
+    width: 40px;
+    background-color: #1f1f1fc9;
+    border-radius: 5px;
+    border: 2px solid #8f8f8f;
   }
 }
