--- a/css/introducao.css
+++ b/css/introducao.css
@@ -9,10 +9,12 @@
 }
 
 .introducao h1 {
+  height: 100%;
   font-size: 4.5rem;
   line-height: 1.125;
   margin-bottom: 30px;
   position: relative;
+  max-width: 12ch;
 }
 
 .introducao h1::before {
@@ -33,6 +35,7 @@ h1::after {
   opacity: 1;
   animation: pisca 0.7s infinite;
 }
+
 @keyframes pisca {
   0%,
   100% {
@@ -41,6 +44,24 @@ h1::after {
   50% {
     opacity: 0;
   }
+}
+
+button {
+  margin-top: 20px;
+  padding: 15px 30px;
+  font-family: "Fira Sans";
+  font-size: 1.2rem;
+  font-weight: 500;
+  border: 1px solid #e0e0e0;
+  background-color: #ffff;
+  border-radius: 5px;
+  text-transform: uppercase;
+}
+
+button:hover {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  box-sizing: border-box;
+  background-color: #fafafa;
 }
 
 .introducao p {
@@ -61,6 +82,7 @@ h1::after {
   }
   .introducao h1 {
     font-size: 2rem;
+    margin-bottom: 20px;
   }
   .introducao h1::before {
     width: 40px;
@@ -68,20 +90,27 @@ h1::after {
     left: 0px;
   }
 }
-@media (max-width: 430px) {
+@media (max-width: 400px) {
   .introducao {
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-content: center;
     display: block;
   }
-
+  section .experiencia {
+    padding: 20px;
+  }
   .introducao img {
-    display: block;
+    display: none;
     padding-bottom: 40px;
   }
   .introducao h1 {
-    margin-left: 10px;
-    font-size: 1.8rem;
+    font-size: 2.5rem;
+  }
+  button {
+    margin-top: 5px;
+    font-size: 0.8rem;
+    padding: 9px 14px;
   }
 }
