:sparkles: feat: section formacao

--- a/css/animate-on-scroll.css
+++ b/css/animate-on-scroll.css
@@ -1,4 +1,4 @@
-.animate {
+/* .animate {
   opacity: 0;
   filter: blur(2px);
   transition: 2.2s;
@@ -17,4 +17,4 @@
   transform: translate(0);
   filter: blur(0);
   opacity: 1;
-}
+} */
