--- a/css/introducao.css
+++ b/css/introducao.css
@@ -29,7 +29,7 @@
   z-index: -1;
 }
 
-h1::after {
+/* h1::after {
   content: "|";
   margin-left: 5px;
   opacity: 1;
@@ -44,14 +44,14 @@ h1::after {
   50% {
     opacity: 0;
   }
-}
+} */
 
 button {
   margin-top: 20px;
-  padding: 15px 30px;
+  padding: 10px 25px;
   font-family: "Fira Sans";
-  font-size: 1.2rem;
-  font-weight: 500;
+  font-size: 1.1rem;
+  font-weight: 700;
   border: 1px solid #e0e0e0;
   background-color: #ffff;
   border-radius: 5px;
@@ -61,7 +61,9 @@ button {
 button:hover {
   border: 1px solid rgba(0, 0, 0, 0.3);
   box-sizing: border-box;
-  background-color: #fafafa;
+  background-color: #e0e0e0;
+  
+  color: #000000;
 }
 
 .introducao p {
