:construction: section portifolio

--- a/css/style.css
+++ b/css/style.css
@@ -4,4 +4,6 @@
 @import"./experiencia.css";
 @import"./formacao.css";
 @import"./footer.css";
-@import "animate-on-scroll.css"
+@import"animate-on-scroll.css";
+@import"./portifolio.css";
+
