--- a/css/footer.css
+++ b/css/footer.css
@@ -51,14 +51,15 @@
   display: flex;
 }
 .redes img {
-  margin: 10px;
-  padding: 10px;
-  background: linear-gradient(#1c2fda, #3cdae4);
-}
+  padding-right: 20px;
+  background-color: #000000;
+  cursor: pointer;
+  
+ }
+ .redes a:hover {
+  color: #000000;
+   }
 
-.redes img a {
-  padding: 50px;
-}
 
 @media (max-width: 800px) {
   .footer-container {
