--- a/css/introducao.css
+++ b/css/introducao.css
@@ -7,9 +7,12 @@
   gap: 100px;
   align-items: center;
 }
+.introducao img {
+  color: #f7f7f7bb;
+}
 
 .introducao h1 {
-  height: 100%;
+  height: 250px;
   font-size: 4.5rem;
   line-height: 1.125;
   margin-bottom: 30px;
@@ -46,27 +49,34 @@
   }
 } */
 
-button {
+.botao-cv {
+  display: flex;
+  width: 120px;
+  align-items: center;
+  gap: 10px;
+  text-decoration: none;
   margin-top: 20px;
-  padding: 10px 25px;
+  padding: 10px 20px;
   font-family: "Fira Sans";
-  font-size: 1.1rem;
-  font-weight: 700;
-  border: 1px solid #e0e0e0;
-  background-color: #ffff;
+  font-size: 1rem;
+  font-weight: 600;
+  border: 1px solid #cccccc;
+  background-color: #9c9c9c;
+  color: #fff;
   border-radius: 5px;
   text-transform: uppercase;
+  box-shadow: 0px 0px 1px 0px #cccccc;
+}
+.botao-cv:hover {
+  border: 1px solid #595959;
+  background-color: #000;
+  color: #fff;
 }
 
-button:hover {
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  box-sizing: border-box;
-  background-color: #e0e0e0;
-
-  color: #000000;
-}
 
 .introducao p {
+  display: block;
+  margin-bottom: 20px;
   font-size: 1.5rem;
   color: #525252;
 }
@@ -92,7 +102,7 @@ button:hover {
     left: 0px;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .introducao {
     padding: 20px;
     display: flex;
@@ -101,24 +111,21 @@ button:hover {
     display: block;
   }
   section .experiencia {
-    padding: 20px;
+    padding: 0 20px;
+    gap: 20px 40px;
   }
   .introducao img {
     border-radius: 50%;
     width: 280px;
     margin-left: 40px;
     padding-bottom: 35px;
-   
   }
   .introducao h1 {
     font-size: 2.5rem;
+    height: 150px;
   }
-  button {
-    margin-top: 5px;
-    font-size: 0.8rem;
-    padding: 9px 14px;
-  }
-  .introducao p {
-    padding-bottom: 10px;
+   h2 {
+  margin: 0px;
+    padding: 0px;
   }
 }
