--- a/css/introducao.css
+++ b/css/introducao.css
@@ -9,13 +9,13 @@
 }
 
 .introducao h1 {
-  height: 100%;
+  height: 250px;
   font-size: 4.5rem;
   line-height: 1.125;
   margin-bottom: 30px;
   position: relative;
   max-width: 12ch;
-}
+ }
 
 .introducao h1::before {
   content: "";
@@ -92,7 +92,7 @@ button:hover {
     left: 0px;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .introducao {
     padding: 20px;
     display: flex;
@@ -108,9 +108,9 @@ button:hover {
     width: 280px;
     margin-left: 40px;
     padding-bottom: 35px;
-   
   }
   .introducao h1 {
+    height: 150px;
     font-size: 2.5rem;
   }
   button {
