:construction: botão topo

--- a/css/animate-on-scroll.css
+++ b/css/animate-on-scroll.css
@@ -1,4 +1,4 @@
-.animate {
+/* .animate {
   opacity: 0;
   filter: blur(2px);
   transition: 2.2s;
@@ -12,7 +12,7 @@
 }
 .animate.from-right {
   transform: translateX(100%);
-}
+} */
 .animate.show {
   transform: translate(0);
   filter: blur(0);
