:construction: Detalhe titulo

--- a/css/introducao.css
+++ b/css/introducao.css
@@ -23,7 +23,7 @@
   display: block;
   width: 130px;
   height: 100px;
-  background: url(../img/detalhe.svg) no-repeat center;
+  background: url(../img/icones/detalhe.svg) no-repeat center;
   position: absolute;
   left: -60px;
   top: -25px;
